--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.0",
     "ngx-wow": "^2.0.1",
     "rxjs": "~6.6.0",
